# skills

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: voice-memos.md
voice-memo-shortcuts/: README.md  setup.sh
voice-memo-shortcuts/raycast/: start-voice-memo.sh  stop-voice-memo.sh
voice-memos/: .env.example  Cargo.toml  README.md  config.yaml  process_memo.py  setup-launchd.sh  setup.sh  watch.sh
voice-memos/src/: main.rs
