[package]
name = "process-memo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "process_memo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
is-terminal = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3"
ureq = { version = "2", features = ["json"] }
